tests/ui/span/drop-location-span-error-crablang-2021-incompatible-closure-captures-96258.stderr
error[E0670]: `async fn` is not permitted in CrabLang 2015
  --> $DIR/drop-location-span-error-crablang-2021-incompatible-closure-captures-96258.rs:8:16
   |
LL |     pub(crate) async fn new(
   |                ^^^^^ to use `async fn`, switch to CrabLang 2018 or later
   |
   = help: pass `--edition 2021` to `crablangc`
   = note: for more on editions, read https://doc.crablang.org/edition-guide

error[E0412]: cannot find type `Duration` in this scope
  --> $DIR/drop-location-span-error-crablang-2021-incompatible-closure-captures-96258.rs:10:19
   |
LL |         interval: Duration,
   |                   ^^^^^^^^ not found in this scope
   |
help: consider importing this struct
   |
LL | use std::time::Duration;
   |

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0412, E0670.
For more information about an error, try `crablangc --explain E0412`.
